<resources>
    <string name="app_name">Book Exchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_requests">My Requests</string>
    <string name="my_posts">My Posts</string>
    <string name="navigation_drawer_open">oper</string>
    <string name="navigation_drawer_close">close</string>
    <string name="submit">Submit</string>


    <string name="title_activity_view_post" translatable="false">ViewPostActivity</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>



    <string name="skip">Skip</string>
    <string name="wise_desc">The World Islamic Sciences and Education University is a prestigious educational institution located in Jordan.\nIt is dedicated to promoting Islamic sciences and providing high-quality education to students.\n\nLed by its president, Dr. Jafar Al Fatanseh, the university offers programs and courses in various disciplines, including Islamic studies, Arabic language, IT majors, and social sciences.\n\nThe university aims to foster a strong understanding of Islamic principles, support academic growth, and prepare students to make valuable contributions to society as knowledgeable and well-rounded individuals. </string>
    <string name="wise">WISE University</string>
    <string name="it_collage_slides">IT collage</string>
    <string name="it_desc">The IT College at the World Islamic Sciences and Education University is one of the prominent colleges within the university.\n\nIt offers specialized educational programs in the field of Information Technology and Computer Science, providing students with the opportunity to acquire the necessary skills and knowledge to work in the rapidly growing IT industry.\n\nThe college is distinguished by qualified and specialized faculty members and provides a modern learning environment equipped with the latest technologies.\n\nThe college aims to prepare students to become professionals in the field of Information Technology, while encouraging them to be creative and innovative in solving modern technological challenges.</string>
    <string name="app_desc">The \"Book Exchange\" project, developed by the IT College at The World Islamic Sciences and Education University, aims to streamline the process of book exchange among students.\n\nRecognizing the importance of accessible and affordable educational resources, the project offers a convenient platform for students to easily trade and exchange their books with fellow peers.\n\nBy utilizing modern technology and digital interfaces, \"Book Exchange\" simplifies the search, selection, and communication process, allowing students to connect with others who have the desired books they need for their studies.\n\nThis innovative solution promotes a sustainable and cost-effective approach to book acquisition, fostering a collaborative and supportive learning community within the university.</string>
    <string name="wise_colleges">Wise Colleges</string>
    <string name="information_technology_collage">Information technology collage</string>
    <string name="college_of_arts_and_sciences">College of Arts and Sciences</string>
    <string name="college_of_da_wah_and_fundamentals_of_religion">College of Da\'wah and Fundamentals of Religion</string>
    <string name="sheikh_noah_college">Sheikh Noah College of Sharia and Law</string>
    <string name="faculty_of_educational">Faculty of Educational Sciences</string>
    <string name="college_of_arts_and_islam">College of Arts and Islamic Architecture</string>
    <string name="college_money_and_business">College Money and Business</string>
    <string name="maliki_hanafi_shafi_i">Faculty of Al ( Maliki,Hanafi,Shafi\'i ) Jurisprudence</string>
    <string name="college_graduate_studies">College Graduate Studies</string>
</resources>