<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".ui.activites.CollageActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/hellix_medium"
        android:text="@string/wise_colleges"
        android:textAllCaps="false"
        android:textColor="@color/fog_dark"
        android:textSize="40sp"
        />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/it_collage"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/information_technology_collage"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Arts_and_Sciences_collage"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/college_of_arts_and_sciences"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Da_wah_collage"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/college_of_da_wah_and_fundamentals_of_religion"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sheikh_noah_college"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/sheikh_noah_college"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Educational_Sciences_college"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/faculty_of_educational"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/Arts_and_Islamic_Architecture"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/college_of_arts_and_islam"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Money_and_Business"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/college_money_and_business"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Malik_Hanafi_Shafi"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/maliki_hanafi_shafi_i"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Graduate_Studies"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                app:cardCornerRadius="25dp">

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_collage"
                    android:fontFamily="@font/hellix_regular"
                    android:gravity="center"
                    android:text="@string/college_graduate_studies"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>



</LinearLayout>